--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -1,10 +1,8 @@
 .button__container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     position: absolute;
     top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .button {
